<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Isola</string>
    <string name="action_info">Info</string>
    <string name="new_game">Neues Spiel</string>
    <string name="new_btgame">Neues Spiel: Bluetooth</string>
    <string name="help">Hilfe</string>
    <string name="choose_opponent">Wähle Gegner:</string>
    <string name="player1">Spieler 1:</string>
    <string name="player2">Spieler 2:</string>
    <string name="title_activity_choose_opponent">ChooseOpponentActivity</string>
    <string name="title_activity_btgame">Bluetoothspiel</string>
    <string name="how_to_play">\nIsola ist ein Brettspiel für 2 Spieler. Der Spieler, der an der Reihe ist, muss zuerst seine Spielfigur auf ein benachbartes Feld (auch diagonal möglich) bewegen und dann ein beliebiges Feld zerstören, auf dem sich keine der beiden Spielfiguren befindet.\n\nEs verliert der Spieler, der mit seiner Spielfigur keinen gültigen Zug mehr ausführen kann, weil alle diese unmittelbar umgebenden Felder zerstört worden sind, oder sich darauf die Spielfigur des Gegenspielers befindet.\n\nViel Spaß!\n</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="close">Schließen</string>
    <string name="how_to_play_headline">Spielregeln:</string>
    <string name="human">Mensch</string>
    <string name="computer_easy">Computer (einfach)</string>
    <string name="computer_medium">Computer (mittel)</string>
    <string name="computer_hard">Computer (schwer)</string>
    <string name="choose_players">Spieler auswählen:</string>
    <string name="begin_game">Spiel beginnen</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="waiting_for_client">Warten auf den Client\n...</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="developer_info_headline">Über diese App:</string>
    <string name="developer_info">Diese App wurde entwickelt von:\n\n\tDavid Südholt\n\tFelix Kibellus\n\tChristian Kotulla\n\nVersion: 1.0</string>
    <string name="bt_player">Bluetooth-Gegner</string>
    <string name="toast_connected">Verbindung erfolgreich</string>
    <string name="player1_move">Spieler 1: Figur bewegen</string>
    <string name="player2_move">Spieler 2: Figur bewegen</string>
    <string name="player1_destroy">Spieler 1: Feld zerstören</string>
    <string name="player2_destroy">Spieler 2: Feld zerstören</string>
    <string name="player1_win">Spieler 1 hat gewonnen!</string>
    <string name="player2_win">Spieler 2 hat gewonnen!</string>
    <string name="rematch">Revanche</string>
    <string name="back">Zurück</string>
    <string name="devices_to_join">Geräte zum Verbinden</string>
    <string name="string_btn_host_game">Spiel erstellen</string>
    <string name="bt_must_act">Bluetooth muss aktiviert werden um fortzufahren</string>
    <string name="device_must_paired">Die Geräte müssen zuerst gekoppelt werden um einem Spiel beizutreten</string>

</resources>
