<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HelpActivity" >

    <TextView
        android:id="@+id/text_view_how_to_play"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/button_close_help"
        android:layout_below="@+id/text_view_how_to_play_headline"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentLeft="true"
        android:text="@string/how_to_play"
        android:scrollbars="vertical"
        android:textSize="20sp" />
    
	<TextView
        android:id="@+id/text_view_how_to_play_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/how_to_play_headline"
        android:textAppearance="?android:attr/textAppearanceLarge" />
	
    <Button
        android:id="@+id/button_close_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:alpha="-230"
        android:background="@drawable/button_custom"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/close" />


</RelativeLayout>
